--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "body-parser": "~1.5.2",
+    "cors": "2.7.1",
     "express": "~4.7.2",
     "http": "0.0.0",
     "jsonwebtoken": "^5.0.2",
@@ -28,5 +29,9 @@
       "core-js": "npm:core-js@^1.1.4",
       "systemjs-hot-reloader": "github:capaj/systemjs-hot-reloader@^0.6.0"
     }
+  },
+  "devDependencies": {
+    "request": "^2.73.0",
+    "xml2js": "^0.4.17"
   }
 }
